test/src/e2e_vm_tests/test_programs/should_fail/multiple_enums_with_the_same_name/src/module1.sw
library;

pub enum MyEnum {
    A: ()
}
